<resources>
    <string name="app_name">FriendFinderApp</string>
    <string name="title_activity_maps">FriendFinderApp</string>
    <string name="title_activity_login">FriendFinderApp</string>

    <!-- Strings related to tryToSignIn -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This login is invalid</string>
    <string name="error_login_already_in_use">This login is already in use by someone else</string>
    <string name="error_invalid_password">This password is too short, it should have at least 6 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_register">Register</string>
    <string name="user_accout_exists">I have an account</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="remember_me">Remeber my credentials</string>
    <string name="error_passwords_mismatch">Passwords are not equal</string>
    <string name="internal_server_error">Sorry, we encountered internal server error. Please try again later or send us email with information</string>
    <string name="DECLINE_INVITATION">Decline</string>
    <string name="ACCEPT_INVITATION">Accept</string>
    <string name="NO_INVITATIONS_FOUND">You don\'t have any invitations</string>
    <string name="invite">Invite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_friends">My Friends</string>
    <string name="my_invitations">My Invitation</string>
    <string name="map">Map</string>
    <string name="friend_finder">Friend Finder</string>
    <string name="satellite">Satellite Map</string>
    <string name="map_type">Change map type</string>
    <string name="normal_map">Normal Map</string>
    <string name="nav_logout">Logout</string>
    <string name="no_friends">You have no friends added :(</string>
    <string name="refresh">Refresh</string>
    <string name="account_label">Account</string>
</resources>
